# jnpr-pathfinder-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml  pytest.yml  test_and_build.yml
src/jnpr_pathfinder_mcp/: __main__.py
src/jnpr_pathfinder_mcp/server/: __init__.py  cli_explorer.py  feature_explorer.py  hct.py
tests/: test_cli_explorer_tools.py  test_fastmcp_server.py  test_feature_explorer_tools.py  test_hct_tools.py
