[project]
name = "jnpr-pathfinder-mcp"
version = "0.1.0"
description = "An MCP Server for interacting with Juniper's public Pathfinder APIs (https://apps.juniper.net)."
readme = "README.md"
authors = [
    { name = "cbinckly", email = "cbinckly@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.12.4",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
]

[project.scripts]
jnpr-pathfinder-mcp = "jnpr_pathfinder_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra
    -q
    --cov jnpr_pathfinder_mcp
    --cov-fail-under 95
    --cov-branch
    --cov-report=term-missing
    --cov-report=html
"""
testpaths = ["tests"]
